--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,9 @@ body {
 .dark .post-content a {
   color: red;
 }
+.post-content pre {
+  background-color: black;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: whitesmoke;
+}
